--- a/app/globals.css
+++ b/app/globals.css
@@ -83,7 +83,38 @@
     @apply justify-center items-center;
   }
 }
-/* 
-* {
-  min-width: 0;
-}  */
+
+/* .item-1 { grid-area: 1 / 1 / 3 / 5; }
+.item-2 { grid-area: 3 / 1 / 9 / 3; }
+.item-3 { grid-area: 7 / 3 / 9 / 11; }
+.item-4 { grid-area: 1 / 9 / 7 / 11; }
+.item-5 { grid-area: 3 / 3 / 7 / 9; }
+.item-6 { grid-area: 1 / 5 / 3 / 9; } */
+
+.item-1 { grid-area: 1 / 1 / 2 / 3; }
+.item-2 { grid-area: 2 / 1 / 5 / 2; }
+.item-3 { grid-area: 4 / 2 / 5 / 6; }
+.item-4 { grid-area: 1 / 5 / 4 / 6; }
+.item-5 { grid-area: 2 / 2 / 4 / 5; }
+.item-6 { grid-area: 1 / 3 / 2 / 5; }
+
+.image-con:hover img {
+  transform: scale(1.06);
+  transition: transform 0.5s ease;
+}
+
+.un {
+  background-size: 0% 2px;
+  background-image: linear-gradient(white 0 0);
+  transition:
+    background-size 0.3s,
+    background-position 0s 0.3s;
+}
+
+.image-con:hover .un {
+  background-size: 100% 4px;
+  background-position: 0 100%;
+  transition:
+    background-size 0.3s,
+    background-position 0s;
+}
