--- a/app/globals.css
+++ b/app/globals.css
@@ -103,7 +103,7 @@
   transition: transform 0.5s ease;
 }
 
-.un {
+/* .un {
   background-size: 0% 2px;
   background-image: linear-gradient(white 0 0);
   transition:
@@ -117,4 +117,4 @@
   transition:
     background-size 0.3s,
     background-position 0s;
-}
+} */
