--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -9,67 +9,68 @@
 
     --card: 0 0% 100%;
     --card-foreground: 20 14.3% 4.1%;
- 
+
     --popover: 0 0% 100%;
     --popover-foreground: 20 14.3% 4.1%;
- 
+
     --primary: 24 9.8% 10%;
     --primary-foreground: 60 9.1% 97.8%;
- 
+
     --secondary: 60 4.8% 95.9%;
     --secondary-foreground: 24 9.8% 10%;
- 
+
     --muted: 60 4.8% 95.9%;
     --muted-foreground: 25 5.3% 44.7%;
- 
+
     --accent: 60 4.8% 95.9%;
     --accent-foreground: 24 9.8% 10%;
- 
+
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 60 9.1% 97.8%;
 
     --border: 20 5.9% 90%;
     --input: 20 5.9% 90%;
     --ring: 20 14.3% 4.1%;
- 
+
     --radius: 0.5rem;
   }
- 
+
   .dark {
     --background: 20 14.3% 4.1%;
     --foreground: 60 9.1% 97.8%;
- 
+
     --card: 20 14.3% 4.1%;
     --card-foreground: 60 9.1% 97.8%;
- 
+
     --popover: 20 14.3% 4.1%;
     --popover-foreground: 60 9.1% 97.8%;
- 
+
     --primary: 60 9.1% 97.8%;
     --primary-foreground: 24 9.8% 10%;
- 
+
     --secondary: 12 6.5% 15.1%;
     --secondary-foreground: 60 9.1% 97.8%;
- 
+
     --muted: 12 6.5% 15.1%;
     --muted-foreground: 24 5.4% 63.9%;
- 
+
     --accent: 12 6.5% 15.1%;
     --accent-foreground: 60 9.1% 97.8%;
- 
+
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 60 9.1% 97.8%;
- 
+
     --border: 12 6.5% 15.1%;
     --input: 12 6.5% 15.1%;
     --ring: 24 5.7% 82.9%;
   }
 }
- 
+
 @layer base {
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
   }
@@ -78,7 +79,10 @@
 @layer components {
   .responsive-width {
     @apply w-[min(90%,1150px)];
-  };
+  }
+
+  
+
   .flex-center {
     @apply justify-center items-center;
   }
@@ -91,12 +95,29 @@
 .item-5 { grid-area: 3 / 3 / 7 / 9; }
 .item-6 { grid-area: 1 / 5 / 3 / 9; } */
 
-.item-1 { grid-area: 1 / 1 / 2 / 3; }
-.item-2 { grid-area: 2 / 1 / 5 / 2; }
-.item-3 { grid-area: 4 / 2 / 5 / 6; }
-.item-4 { grid-area: 1 / 5 / 4 / 6; }
-.item-5 { grid-area: 2 / 2 / 4 / 5; }
-.item-6 { grid-area: 1 / 3 / 2 / 5; }
+.item-1 {
+  grid-area: 1 / 1 / 2 / 3;
+}
+
+.item-2 {
+  grid-area: 2 / 1 / 5 / 2;
+}
+
+.item-3 {
+  grid-area: 4 / 2 / 5 / 6;
+}
+
+.item-4 {
+  grid-area: 1 / 5 / 4 / 6;
+}
+
+.item-5 {
+  grid-area: 2 / 2 / 4 / 5;
+}
+
+.item-6 {
+  grid-area: 1 / 3 / 2 / 5;
+}
 
 .image-con:hover img {
   transform: scale(1.06);
@@ -118,3 +139,45 @@
     background-size 0.3s,
     background-position 0s;
 } */
+
+@media (max-width: 640px) {
+  .exercise {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 3
+  }
+
+  .electronics {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 3;
+    grid-row-end: 5;
+  }
+
+  .kids {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 3;
+    grid-row-end: 7;
+  }
+
+  .shoes {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 5;
+    grid-row-end: 9;
+  }
+
+  .decor {
+    grid-row-start: 7;
+    grid-row-end: 9;
+  }
+
+  .workoutClothes {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 9;
+    grid-row-end: 11;
+  }
+}
